kubernetes-application/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-application-service
  namespace: my-application-namespace
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: my-application
